# minne

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .envrc  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  Dockerfile  PR_DESCRIPTION.md  README.md  bacon.toml  changes.md  database.md  deny.toml  devenv.nix  devenv.yaml  dist-workspace.toml  doc.rs  docker-compose.yml  erl_crash.dump  example_flake.nix  flake.nix  json_schema.md  log  package-lock.json  package.json  page_base.html  postcss.config.js  prompt  result  rust-toolchain.toml  tailwind.config.js  tests.md  todo.md
api-router/: Cargo.toml
api-router/src/: api_state.rs  error.rs  lib.rs  middleware_api_auth.rs
api-router/src/routes/: categories.rs  ingest.rs  ingress.rs  liveness.rs  mod.rs  readiness.rs
api-router/tests/: api_router_integration.rs
common/: .surrealdb  Cargo.toml
common/db/migrations/: 20250503_215025_initial_setup.surql  20250921_120004_fix_datetime_fields.surql  20251022_120302_add_scratchpad_table.surql  20251121_113122_migrate_embedding_data.surql  20251122_151002_remove_legacy_embedding_fields.surql  20251210_add_embedding_backend_to_system_settings.surql  20251231_enforce_schemafull.surql  20260604_000001_fastembed_default_embedding_model.surql  20260612_000001_system_settings_index_rebuild.surql
common/db/schemas/: auth.surql  file.surql  ingestion_task.surql  knowledge_entity.surql  knowledge_entity_embedding.surql  message.surql  scratchpad.surql  system_settings.surql
common/migrations/: 20250503_215025_initial_setup.surql  20250509_152033_rename_instructions_to_context.surql  20250514_142342_add_full_text_search_text_content.surql  20250606_234535_add_embedding_model_and_dimensions_to_system_settings.surql  20250627_120000_add_image_processing_settings.surql  20250627_231035_remove_job_table.surql  20250701_000000_add_voice_processing_model_to_system_settings.surql  20251003_000001_add_fts_for_entities_and_chunks.surql  20251012_205900_state_machine_migration.surql  20251120_000001_remove_legacy_hnsw_indexes.surql  20251121_113121_separate_embeddings_to_own_table.surql  20251231_enforce_schemafull.surql  20260116_000000_add_user_theme_preference.surql  20260528_000001_file_user_sha256_index.surql  20260528_000002_knowledge_graph_storage_hardening.surql  20260528_000003_text_chunk_embedding_storage_hardening.surql
common/migrations/definitions/: 20250503_215025_initial_setup.json  20250509_152033_rename_instructions_to_context.json  20250514_142342_add_full_text_search_text_content.json  20250606_234535_add_embedding_model_and_dimensions_to_system_settings.json  20250627_120000_add_image_processing_settings.json  20250701_000000_add_voice_processing_model_to_system_settings.json  20250921_120004_fix_datetime_fields.json  20251022_120302_add_scratchpad_table.json  20251122_151002_remove_legacy_embedding_fields.json  20251210_add_embedding_backend_to_system_settings.json  20260116_000000_add_user_theme_preference.json  20260528_000001_file_user_sha256_index.json  20260528_000003_text_chunk_embedding_storage_hardening.json  _initial.json
common/schemas/: analytics.surql  conversation.surql  file.surql  ingestion_task.surql  knowledge_entity.surql  knowledge_entity_embedding.surql  message.surql  relates_to.surql  system_settings.surql  text_chunk.surql  text_chunk_embedding.surql  text_content.surql  user.surql
common/src/: error.rs  lib.rs  test_utils.rs
common/src/storage/: db.rs  indexes.rs  mod.rs  store.rs
common/src/utils/: config.rs  embedding.rs  ingest_limits.rs  mod.rs  stream_parser.rs  template_engine.rs
composite-retrieval/: Cargo.toml
composite-retrieval/src/: answer_retrieval.rs  fts.rs  graph.rs  lib.rs  scoring.rs  vector.rs
composite-retrieval/src/pipeline/: config.rs  mod.rs  state.rs
crates/api-router/: Cargo.toml
crates/api-router/src/: api_state.rs  error.rs  lib.rs  middleware_api_auth.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs
crates/composite-retrieval/: Cargo.toml
crates/composite-retrieval/src/: answer_retrieval.rs  answer_retrieval_helper.rs  graph.rs  lib.rs  vector.rs
crates/html-router/: Cargo.toml  build.rs
crates/html-router/assets/: input.css  style.css
crates/html-router/src/: error.rs  html_state.rs  lib.rs  middleware_analytics.rs  middleware_auth.rs  router_factory.rs  template_response.rs
crates/html-router/templates/: body_base.html  modal_base.html  navigation_bar.html  theme_toggle.html
crates/ingestion-pipeline/: Cargo.toml
crates/ingestion-pipeline/src/: enricher.rs  lib.rs  pipeline.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs  server.rs  worker.rs
evaluations/: Cargo.toml  README.md  REFACTOR.md  manifest.yaml
evaluations/src/: args.rs  cache.rs  cases.rs  context_stats.rs  db_helpers.rs  eval.rs  inspection.rs  main.rs  namespace.rs  openai.rs  perf.rs  report.rs  settings.rs  slice.rs  snapshot.rs  types.rs
evaluations/src/cli/: mod.rs  status.rs
evaluations/src/corpus/: config.rs  mod.rs  orchestrator.rs  store.rs
evaluations/src/datasets/: nq.rs  (+7 more)
html-router/: Cargo.toml  app.css  package-lock.json  package.json  tailwind.config.js
html-router/assets/: admin-prompt-reset.js  design-polish.js  knowledge-graph.js  manifest.json  modal.js  style.css  theme-toggle.js  toast.js
html-router/src/: html_state.rs  lib.rs  router_factory.rs
html-router/templates/: body_base.html  head_base.html  ingestion_modal.html  modal_base.html  navigation_bar.html  searchbar.html  sidebar.html  theme_toggle.html
html-router/tests/: router_integration.rs  template_load.rs
ingestion-pipeline/: Cargo.toml
ingestion-pipeline/src/: enricher.rs  lib.rs  pipeline.rs
integration-tests/: Cargo.toml  README.md  TESTING_REQUIREMENTS.md
integration-tests/tests/: integration_tests.rs  test_utils.rs
main/: Cargo.toml
main/src/: bootstrap.rs  main.rs  server.rs  worker.rs
retrieval-pipeline/: Cargo.toml
retrieval-pipeline/src/: answer_retrieval.rs  answer_retrieval_helper.rs  fts.rs  graph.rs  lib.rs  query.rs  reranking.rs  scoring.rs  vector.rs
(+519 files in other folders)
