[package]
name = "api-router"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
axum_typed_multipart = { workspace = true} 

common = { path = "../common" }
