[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
async-openai = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
dom_smoothie = { workspace = true }

async-trait = "0.1.88"
axum_session = { workspace = true }
axum_session_auth = { workspace = true }
axum_session_surreal =  { workspace = true}
axum_typed_multipart = { workspace = true} 
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
config = "0.15.4"
mime = "0.3.17"
mime_guess = "2.0.5"
reqwest = {version = "0.12.12", features = ["charset", "json"]}
sha2 = "0.10.8"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
surrealdb-migrations = "2.2.2"

minijinja = { version = "2.5.0", features = ["loader", "multi_template"] }
minijinja-autoreload = "2.5.0"
minijinja-embed = { version = "2.8.0" }
minijinja-contrib = { version = "2.6.0", features = ["datetime", "timezone"] }
include_dir = "0.7.4"

[features]
test-utils = []
