[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
async-openai = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
dom_smoothie = { workspace = true }
axum_session = { workspace = true }
axum_session_auth = { workspace = true }
axum_session_surreal =  { workspace = true}
axum_typed_multipart = { workspace = true} 
include_dir = { workspace = true }
minijinja = { workspace = true }
minijinja-autoreload = { workspace = true }
minijinja-embed = { workspace = true }
minijinja-contrib = {workspace = true }
async-trait = { workspace = true } 
chrono = { workspace = true } 
chrono-tz = { workspace = true } 
config = { workspace = true } 
mime = { workspace = true } 
mime_guess = { workspace = true } 
reqwest = { workspace = true } 
sha2 = { workspace = true } 
url = { workspace = true }
uuid = { workspace = true } 
surrealdb-migrations = { workspace = true } 
tokio-retry = { workspace = true }


[features]
test-utils = []
