[package]
name = "composite-retrieval"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
futures = { workspace = true }
async-openai = { workspace = true }
uuid = { workspace = true }
 
common = { path = "../common", features = ["test-utils"] }
state-machines = { workspace = true }
