[package]
name = "evaluations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-openai = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
retrieval-pipeline = { path = "../retrieval-pipeline" }
ingestion-pipeline = { path = "../ingestion-pipeline" }
futures = { workspace = true }
fastembed = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
text-splitter = { workspace = true }
unicode-normalization = { workspace = true }
rand = "0.8"
sha2 = { workspace = true }
object_store = { workspace = true }
surrealdb = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
once_cell = "1.19"
serde_yaml = "0.9"
criterion = "0.5"
state-machines = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = { workspace = true }
common = { path = "../common", features = ["test-utils"] }
