[package]
name = "html-router"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
thiserror = { workspace = true }
axum_session = { workspace = true }
axum_session_auth = { workspace = true }
axum_session_surreal =  { workspace = true}
axum_typed_multipart = { workspace = true} 
tempfile = { workspace = true }
futures = { workspace = true }
surrealdb = { workspace = true }

axum-htmx = "0.7.0"
async-stream = "0.3.6"
minijinja = { version = "2.5.0", features = ["loader", "multi_template"] }
minijinja-autoreload = "2.5.0"
minijinja-embed = { version = "2.8.0" }
minijinja-contrib = { version = "2.6.0", features = ["datetime", "timezone"] }
plotly = "0.12.1"
tower-http = { version = "0.6.2", features = ["fs"] }
chrono-tz = "0.10.1"
tower-serve-static = "0.1.1"
include_dir = "0.7.4"

common = { path = "../common" }
composite-retrieval = { path = "../composite-retrieval" }
json-stream-parser = { path = "../json-stream-parser" }

[build-dependencies]
minijinja-embed = { version = "2.8.0" }
