[package]
name = "html-router"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
thiserror = { workspace = true }
axum_session = { workspace = true }
axum_session_auth = { workspace = true }
axum_session_surreal =  { workspace = true}
axum_typed_multipart = { workspace = true} 
tempfile = { workspace = true }
futures = { workspace = true }
surrealdb = { workspace = true }
include_dir = { workspace = true }
minijinja = { workspace = true }
minijinja-autoreload = { workspace = true }
minijinja-embed = { workspace = true }
minijinja-contrib = {workspace = true }
axum-htmx = { workspace = true } 
async-stream = { workspace = true } 
tower-http = { workspace = true } 
chrono-tz = { workspace = true } 
tower-serve-static = { workspace = true } 
tokio-util = { workspace = true } 
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

common = { path = "../common" }
retrieval-pipeline = { path = "../retrieval-pipeline" }
json-stream-parser = { path = "../json-stream-parser" }

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }

[build-dependencies]
minijinja-embed = { version = "2.8.0" }
