[package]
name = "ingestion-pipeline"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-openai = { workspace = true }
surrealdb = { workspace = true }
dom_smoothie = { workspace = true }
tempfile = { workspace = true }
axum_typed_multipart = { workspace = true} 
reqwest = { workspace = true }
chrono = { workspace = true }
text-splitter = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
headless_chrome = { workspace = true }
base64 = { workspace = true }

common = { path = "../common" }
composite-retrieval = { path = "../composite-retrieval" }
[features]
docker = []
