[package]
name = "ingestion-pipeline"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-openai = { workspace = true }
surrealdb = { workspace = true }
dom_smoothie = { workspace = true }
tempfile = { workspace = true }
axum_typed_multipart = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
text-splitter = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
pdf-extract = { workspace = true }
lopdf = { workspace = true }
tendril = { workspace = true }
servo-fetch = { workspace = true }
servo-allocator = { version = "0.2", features = ["use-system-allocator"] }
pdfium-auto = { workspace = true }
pdfium-render = { workspace = true }
image = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
state-machines = { workspace = true }
tokenizers = { workspace = true }
common = { path = "../common" }
retrieval-pipeline = { path = "../retrieval-pipeline" }

[features]

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
