[package]
name = "main"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/perstarkse/minne"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
surrealdb = { workspace = true }
futures = { workspace = true }
async-openai = { workspace = true }
tracing-subscriber = { workspace = true }

ingestion-pipeline = { path = "../ingestion-pipeline" }
api-router = { path = "../api-router" }
html-router = { path = "../html-router" }
common = { path = "../common" }
retrieval-pipeline = { path = "../retrieval-pipeline" }

[dev-dependencies]
tower = "0.5"
uuid = { workspace = true }
common = { path = "../common", features = ["test-utils"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "main"
path = "src/main.rs"
