[package]
name = "retrieval-pipeline"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
futures = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
fastembed = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
 
common = { path = "../common" }

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
