[package]
name = "retrieval-pipeline"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
fastembed = { workspace = true }

common = { path = "../common", features = ["test-utils"] }

[dev-dependencies]
anyhow = { workspace = true }
uuid = { workspace = true }
